# bovi

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CITATION.cff  CLAUDE.md  README.md  docker-compose.yml  justfile  pyproject.toml
.githooks/: pre-commit
.github/actions/azure-login/: action.yml
.github/actions/build-function-wheels/: action.yml
.github/actions/check-containerapp-health/: action.yml
.github/actions/check-function-triggers/: action.yml
.github/actions/deploy-function-app/: action.yml
.github/actions/docker-build-push/: action.yml
.github/actions/install-functions-core-tools/: action.yml
.github/actions/install-infra-dependencies/: action.yml
.github/actions/prepare-autoencoder-function-package/: action.yml
.github/actions/prepare-curves-function-package/: action.yml
.github/actions/pulumi-up/: action.yml
.github/actions/resolve-current-image/: action.yml
.github/actions/run-api-migrations/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/actions/smoke-curves-fit/: action.yml
.github/actions/smoke-function-health/: action.yml
.github/actions/sync-autoencoder-assets/: action.yml
.github/workflows/: api-tests.yml  bump-version.yml  cffconvert.yml  deploy.yml  docs.yml  lint.yml  publish.yml  pulumi-preview.yml  pytest.yml
apps/backend/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  justfile  pyproject.toml
apps/backend/api/alembic/: env.py
apps/backend/api/alembic/versions/: 0001_add_herd_profiles_table.py
apps/backend/api/scripts/: __init__.py  generate_preset_datasets.py  manage_access.py
apps/backend/api/src/bovi_api/: __init__.py  app.py  auth.py  benchmark_ingestion.py  benchmark_pdf.py  benchmark_stats.py  database.py  herd_stats_ingestion.py  migrations.py  models.py  ownership.py  settings.py  storage.py  upload_limits.py  upload_storage.py
apps/backend/api/src/bovi_api/alembic/: env.py
apps/backend/api/src/bovi_api/alembic/versions/: 0001_add_herd_profiles_table.py  0002_add_benchmark_tables.py  0003_add_challenge_actual_yields.py  0004_add_benchmark_columns.py  0005_add_fitting_results_table.py  0006_add_submission_run_options.py  0006_add_users_organizations.py  0007_add_blob_storage_artifacts.py  0007_add_challenge_dataset_metadata.py  0007_add_upload_audits.py  0008_add_blob_storage_artifacts.py  0008_multi_tenant_invites_and_herd_scope.py  0010_add_challenge_dataset_metadata.py  0011_add_blob_storage_artifacts.py  0012_scope_fitting_results.py  0013_add_invite_roles.py  0014_add_access_role_audits.py
apps/backend/api/src/bovi_api/routes/: admin.py  auth.py  benchmark.py  datasets.py  health.py  herd_profiles.py  organizations.py  proxy.py  results.py  uploaded_datasets.py
apps/backend/api/src/bovi_api/scripts/: __init__.py  manage_access.py
apps/backend/api/tests/: conftest.py  test_admin_routes.py  test_auth_organization.py  test_auth_tokens.py  test_benchmark_ingestion.py  test_benchmark_pdf.py  test_benchmark_routes.py  test_benchmark_stats.py  test_database.py  test_datasets_routes.py  test_generate_preset_datasets.py  test_health.py  test_herd_profiles.py  test_herd_stats_ingestion.py  test_manage_access_script.py  test_migrations.py  test_proxy_routes.py  test_results.py  test_settings.py  test_upload_limits.py  test_upload_storage.py
apps/backend/models/lactation-autoencoder/: .env.example  function_app.py  justfile  main.py  model_assets.py  pyproject.toml  schemas.py  settings.py
apps/backend/models/lactation-autoencoder/tests/: __init__.py  conftest.py  test_main.py  test_model_assets.py  test_schemas.py  test_startup.py
apps/backend/models/lactation-curves/: .env.example  function_app.py  justfile  main.py  pyproject.toml  settings.py
apps/backend/models/lactation-curves/tests/: conftest.py  test_characteristic.py  test_fit.py  test_lactation_curves_health.py  test_test_interval.py  test_yield_estimators.py
apps/frontend/dashboard/: .dockerignore  .env.local.example  Dockerfile  README.md  next.config.mjs  package.json  tsconfig.tsbuildinfo
apps/frontend/dashboard/src/: middleware.test.ts  middleware.ts
apps/frontend/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/dashboard/src/app/(dashboard)/: layout.tsx
apps/frontend/dashboard/src/app/join/: page.tsx
apps/frontend/dashboard/src/data/: example-autoencoder.ts  example-lactations.ts  herd-stats-metadata.test.ts  herd-stats-metadata.ts  model-metadata.test.ts  model-metadata.ts
apps/frontend/dashboard/src/lib/: api-client.test.ts  api-client.ts  autoencoder-request.test.ts  autoencoder-request.ts  benchmark-dataset.test.ts  benchmark-dataset.ts  characteristics.test.ts  characteristics.ts  daily-model-input.test.ts  daily-model-input.ts  env.test.ts  env.ts  herd-profile-utils.test.ts  herd-profile-utils.ts  sample-test-days.ts  units.ts  upload-limits.test.ts  upload-limits.ts
apps/frontend/dashboard/src/types/: api.test.ts  api.ts
apps/infrastructure/: .env.dev.example  .env.example  .env.prod.example  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
apps/infrastructure/scripts/: load-env.sh
apps/infrastructure/src/: __main__.py
data/experiments/first_yolo_experiment/: config.yaml  dataloader_config_advanced.yaml  dataloader_config_simple.yaml
data/experiments/model_registry_tutorial/: config.yaml
data/experiments/production_pipeline/: config.yaml
docs/superpowers/plans/: 2026-04-08-lactation-autoencoder-api.md  2026-04-15-herd-stats-management.md  2026-05-01-benchmark-tab.md
docs/superpowers/specs/: 2026-04-08-lactation-autoencoder-api-design.md  2026-04-15-herd-stats-management-design.md  2026-05-01-benchmark-tab-design.md
misc/agents/refactor/repo_initialization/: FULL_REFACTOR.md
scripts/: check_frontend_affected.py  generate_preset_datasets.py  test_affected.py  typecheck_affected.py  upload_autoencoder_assets_to_icar.sh
scripts/tests/: test_test_affected.py
scripts/workflows/: sync-version.sh
(+77 files in other folders)
