[project]
name = "bovi"
version = "0.1.0"
description = "Bovi platform — ML framework, public models, APIs, and infrastructure for dairy analytics"
authors = [{ name = "Douwe de Kok", email = "douwedekok@gmail.com" }]
requires-python = ">= 3.12, < 3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/bovi-core",
    "packages/models/*",
    "packages/infrastructure/*",
    "apps/backend/api",
    "apps/backend/models/*",
    "apps/infrastructure",
]

[tool.uv.sources]
bovi-core = { workspace = true }
lactationcurve = { workspace = true }
lactation-autoencoder = { workspace = true }
bovi-yolo = { workspace = true }
bovi-infrastructure = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "basedpyright==1.39.3",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "nbconvert>=7.17.0",
    "ipykernel>=7.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
pythonPlatform = "All"
# torch's type stubs don't expose tensor/as_tensor/float32/device/uint8 via __all__,
# but PyTorch's documented public API uses them — disable the false positives.
reportPrivateImportUsage = "none"
exclude = [
    "**/.venv",
    "**/node_modules",
    "**/notebooks/**",
    "**/*.ipynb",
]

[tool.pytest.ini_options]
importmode = "importlib"
pythonpath = [
    "packages/bovi-core/tests",
    "apps/backend/models/lactation-autoencoder",
]
testpaths = [
    "packages/bovi-core/tests",
    "packages/models/lactationcurve/tests",
    "packages/models/lactation-autoencoder/tests",
    "apps/backend/api/tests",
    "apps/backend/models/lactation-autoencoder/tests",
]
