[project]
name = "bovi"
version = "0.1.0"
description = "Bovi platform — ML framework, public models, APIs, and infrastructure for dairy analytics"
authors = [{ name = "Douwe de Kok", email = "douwedekok@gmail.com" }]
requires-python = ">= 3.12, < 3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/bovi-core",
    "packages/models/*",
    "packages/infrastructure/*",
    "apps/backend/api",
    "apps/backend/models/*",
    "apps/infrastructure",
]

[tool.uv.sources]
bovi-core = { workspace = true }
lactationcurve = { workspace = true }
lactation-autoencoder = { workspace = true }
bovi-yolo = { workspace = true }
bovi-infrastructure = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "basedpyright==1.39.3",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "nbconvert>=7.17.0",
    "ipykernel>=7.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"
# torch's type stubs don't expose tensor/as_tensor/float32/device/uint8 via __all__,
# but PyTorch's documented public API uses them — disable the false positives.
reportPrivateImportUsage = "none"
exclude = [
    "**/.venv",
    "**/.worktrees",
    "**/node_modules",
    "**/notebooks/**",
    "**/*.ipynb",
]

[tool.pytest.ini_options]
pythonpath = [
    "packages/bovi-core/src",
    "packages/bovi-core/tests",
    "packages/models/lactationcurve/src",
    "packages/models/lactation-autoencoder/src",
    "apps/backend/api/src",
    "apps/backend/models/lactation-autoencoder",
    "apps/backend/models/lactation-curves",
]
testpaths = [
    "packages/bovi-core/tests",
    "packages/models/lactationcurve/tests",
    "packages/models/lactation-autoencoder/tests",
    "apps/backend/api/tests",
    "apps/backend/models/lactation-autoencoder/tests",
]
markers = [
    "api: central FastAPI gateway tests",
    "azure: tests that require live Azure services or credentials",
    "basic: basic behavior tests",
    "bayesian: Bayesian lactation curve tests",
    "characteristic: lactation curve characteristic tests",
    "core: bovi-core framework tests",
    "edge_cases: edge case tests",
    "errorhandling: error handling tests",
    "fitting: model fitting tests",
    "frequentist: frequentist lactation curve tests",
    "function_autoencoder: lactation autoencoder Function App tests",
    "function_curves: lactation curves Function App tests",
    "helpers: helper function tests",
    "integration: integration tests",
    "interpolation: interpolation tests",
    "islc: ISLC model tests",
    "islc_method: ISLC method tests",
    "lactation_autoencoder: lactation autoencoder package tests",
    "lactationcurve: lactation curve package tests",
    "model_weights: tests that require model weight artifacts",
    "models: model behavior tests",
    "multiprocessing: tests that exercise multiprocessing workers",
    "numeric: numerical behavior tests",
    "output_validation: output validation tests",
    "persistency: persistency tests",
    "realistic: realistic data scenario tests",
    "representation: representation tests",
    "slow: tests that are too slow or fragile for the default affected run",
    "tensorflow: tests that require TensorFlow runtime dependencies",
    "torch: tests that require PyTorch runtime dependencies",
    "utility: utility tests",
    "vision: image/vision pipeline tests",
    "yolo: YOLO package tests",
]
