[project]
name = "bovi-infra-deployment"
version = "0.1.0"
description = "Bovi platform Azure deployment — Pulumi program"
authors = [{ name = "Douwe de Kok", email = "douwedekok@gmail.com" }]
requires-python = ">= 3.12, < 3.13"
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-azure-native>=2.0.0",
    "bovi-infrastructure",
]

[tool.uv.sources]
bovi-infrastructure = { workspace = true }

[tool.uv]
package = false
