[project]
name = "bovi-api"
version = "0.1.0"
description = "Bovi central API — gateway, SQLite persistence, and monitoring"
authors = [{ name = "Douwe de Kok", email = "douwedekok@gmail.com" }]
requires-python = ">= 3.12, < 3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "azure-storage-blob>=12.28.0",
    "pandas>=2.3",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "fpdf2>=2.7",
    "matplotlib>=3.9",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bovi_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
